# Flam-Intern-Assignment

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/max/ohm/flaminternassignment/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  native_processor.cpp  native_processor.h
app/src/main/java/max/ohm/flaminternassignment/: MainActivity.kt
app/src/main/java/max/ohm/flaminternassignment/camera/: CameraManager.kt
app/src/main/java/max/ohm/flaminternassignment/gl/: CameraGLSurfaceView.kt  TextureRenderer.kt
app/src/main/java/max/ohm/flaminternassignment/jni/: OpenCVProcessor.kt
app/src/main/java/max/ohm/flaminternassignment/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/max/ohm/flaminternassignment/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
